--- a/app/src/main/res/values-es/text.xml
+++ b/app/src/main/res/values-es/text.xml
@@ -32,4 +32,17 @@
     <string name="cant_upload">Tus resultados no se han podio guardar</string>
     <string name="created_by">Hecho por:</string>
     <string name="best_score_day">Mejor del día</string>
+    <string name="my_email">raquelgutierrezg.97@gmail.com</string>
+    <string name="my_name">Raquel Gutiérrez García</string>
+    <string name="title">Shake it!</string>
+    <string name="chart">MPAndroidChart:</string>
+    <string name="license">
+        Copyright 2016 Philipp Jahoda\n
+        Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at
+        \n\nhttp://www.apache.org/licenses/LICENSE-2.0\n
+        \nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
+    </string>
+    <string name="title_activity_shake">Shake it!</string>
+    <string name="app_name">Shake it!</string>
+
 </resources>
