--- a/app/src/main/res/values/text.xml
+++ b/app/src/main/res/values/text.xml
@@ -42,4 +42,6 @@
         \nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
     </string>
     <string name="best_score_day">Best of the day</string>
+    <string name="title_activity_shake">Shake it!</string>
+
 </resources>
